--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Título Nuevo modificado</h1>
+
+    <form action="/algo" method="get">
+        <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
