Se modifico index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Título Nuevo modificado</h1>
 
     <form action="/algo" method="get">
+        <input type="text" name="firstName" id="name">
         <input type="button" value="Enviar">
     </form>
 </body>
