--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Título Nuevo modificado</h1>
 
     <form action="/algo" method="get">
-        <input type="text" name="firstName" id="name">
+        <input type="text" name="firstName" id="firstName">
+        <input type="text" name="lastName" id="lastName">
         <input type="button" value="Enviar">
     </form>
 </body>
